Fix homepage layout on mobile, fix overflow, TODO: fix result page overflow, lotties animations and image location display

--- a/styles/modal-header.css
+++ b/styles/modal-header.css
@@ -1,13 +1,14 @@
 /* Header Styles */
 
 .header {
-	height: 60px;
+	height: 9vh;
+	max-height: 85px;
 	width: 100%;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
-	padding: 10px;
+	padding: 5px;
 }
 
 .header h1 {
@@ -40,7 +41,7 @@
 	justify-content: center;
 	align-items: center;
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 	position: absolute;
 	background: rgba(0, 0, 0, 0.4);
 	z-index: 10;
