--- a/styles/result.css
+++ b/styles/result.css
@@ -3,11 +3,14 @@
 body {
 	margin: auto;
 	font-family: 'Lexend Peta', sans-serif;
-	height: 100vh;
 	overflow: hidden;
 }
 
 /* Main body */
+#resultContainer {
+	overflow-y: hidden;
+}
+
 section {
 	display: flex;
 	flex-direction: row;
